update memory option